added pages and qualities in the home page

--- a/src/sass/abstracts/_root.scss
+++ b/src/sass/abstracts/_root.scss
@@ -7,4 +7,9 @@
   --clr-secondary-light-peach: #ffad9b;
   --clr-secondary-dark-grey: #333136;
   --clr-secondary-light-grey: #f1f3f5;
+  --fs-h1: 48px;
+  --fs-h2: 40px;
+  --fs-h3: 20px;
+  --fs-p: 16px;
+
 }
