--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,7 @@
 @use './abstracts/root';
 @use './abstracts/fonts' as *;
 @use './components/navbar.scss';
+@use './pages/home.scss';
 
 *{
   padding: 0;
@@ -8,9 +9,18 @@
   box-sizing: border-box;
 }
 
+html{
+  height: 100%;
+}
+
 body{
   background-color: #f2f2f2;
   padding: 50px 100px 0px 100px;
-  overflow-x: hidden;
   font-family: "Jost", Arial, Helvetica, sans-serif;
+  min-height: 100%;
+  height: 100%;
+}
+
+#root{
+  // position: relative;
 }
