--- a/src/sass/pages/home.scss
+++ b/src/sass/pages/home.scss
@@ -144,9 +144,35 @@
       left: 50%;
       transform: translateX(-50%);
     }
+    .qualities__third-circle, .qualities__second-circle{
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
 
-  &__second-circle{
+  &__second-circle svg{
     transform: rotate(-90deg);
+  }
+
+  &__third-circle svg{
+    transform: rotate(90deg);
+  }
+
+  &__quality{
+    margin-top: 50px;
+    font-size: var(--fs-h3);
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    line-height: 26px;
+  }
+
+  &__text{
+    margin-top: 50px;
+    font-size: var(--fs-p);
+    font-weight: 400;
+    line-height: 26px;
+    text-align: center;
   }
 }
