multiple pages done

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,10 @@
 @use './components/contactLink.scss';
 @use './components/footer.scss';
 @use './pages/home.scss';
+@use './pages/webDesign.scss';
+@use './pages/appDesign.scss';
+@use './pages/graphicDesign.scss';
+@use './pages/aboutUs.scss';
 
 *{
   padding: 0;
