--- a/src/sass/pages/home.scss
+++ b/src/sass/pages/home.scss
@@ -23,7 +23,7 @@
   }
 
   &__phone-image{
-    right: -10px;
+    right: -100px;
   }
 
   &__content{
@@ -134,6 +134,7 @@
   display: flex;
   gap: 20px;
   text-align: center;
+  position: relative;
 
   &__images{
     position: relative;
@@ -175,4 +176,13 @@
     line-height: 26px;
     text-align: center;
   }
+
+  .bg-image-rounded-rect2{
+    position: absolute;
+    top: 100px;
+    right: -100px;
+    z-index: -10;
+    transform: rotate(-180deg);
+  }
 }
+
