finalized about us and locations page

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 @use './pages/appDesign.scss';
 @use './pages/graphicDesign.scss';
 @use './pages/aboutUs.scss';
+@use './pages/Locations.scss';
 
 *{
   padding: 0;
