--- a/src/sass/pages/aboutUs.scss
+++ b/src/sass/pages/aboutUs.scss
@@ -42,3 +42,143 @@
   left: -100px;
   z-index: -1;
 }
+
+.left-image{
+  background-color: #FDF3F0;
+  border-radius: 10px;
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+
+  img{
+    border-radius: 10px 0px 0px 10px;
+  }
+
+  &__content{
+    padding: 0 50px;
+  }
+
+  &__title{
+    font-size: var(--fs-h2);
+    line-height: 48px;
+    color: var(--clr-primary-peach);
+    font-weight: 500;
+    margin-bottom: 30px;
+    letter-spacing: 2px;
+  }
+
+  &__text1, &__text2{
+    font-size: var(--fs-p);
+    line-height: 26px;
+    font-weight: 400;
+  }
+
+  &__text1{
+    margin-bottom: 25px;
+  }
+}
+
+.locations-about{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 100px;
+
+  &__canada, &__australia, &__uk{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  &__images{
+    position: relative;
+    width: 202px;
+    margin: 0 auto;
+
+    img{
+      display: block;
+    }
+
+    &__small-circle1, &__small-circle2, &__small-circle3{
+      position: absolute;
+    }
+
+    &__small-circle1{
+      transform: rotate(90deg);
+    }
+
+    &__small-circle3{
+      transform: rotate(-90deg);
+    }
+  }
+
+  &__title{
+    text-transform: uppercase;
+    font-size: var(--fs-h3);
+    letter-spacing: 5px;
+    text-align: center;
+    margin: 50px 0;
+    font-weight: 500;
+    line-height: 26px;
+  }
+
+  &--btn{
+    background-color: var(--clr-primary-peach);
+    color: var(--clr-primary-white);
+    border: none;
+    border-radius: 10px;
+    padding: 20px;
+    justify-self: center;
+    font-size: 15px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-weight: 500;
+    line-height: 21.68px;
+    text-align: center;
+    justify-self: center;
+    align-self: center;
+    cursor: pointer;
+  }
+}
+
+.right-image{
+  background-color: #FDF3F0;
+  border-radius: 10px;
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+
+  img{
+    border-radius: 10px 0px 0px 10px;
+  }
+
+  &__content{
+    padding: 0 50px;
+  }
+
+  &__title{
+    font-size: var(--fs-h2);
+    line-height: 48px;
+    color: var(--clr-primary-peach);
+    font-weight: 500;
+    margin-bottom: 30px;
+    letter-spacing: 2px;
+  }
+
+  &__text1, &__text2{
+    font-size: var(--fs-p);
+    line-height: 26px;
+    font-weight: 400;
+  }
+
+  &__text1{
+    margin-bottom: 25px;
+  }
+}
+
+.about-bg-image-rounded-rect{
+  position: absolute;
+  top: 1777px;
+  left: 500px;
+  z-index: -1;
+}
