contact page done

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 @use './pages/graphicDesign.scss';
 @use './pages/aboutUs.scss';
 @use './pages/Locations.scss';
+@use './pages/Contact.scss';
 
 *{
   padding: 0;
