--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,6 +19,7 @@
 
 html{
   height: 100%;
+  width: 100%;
 }
 
 body{
@@ -27,6 +28,11 @@ body{
   font-family: "Jost", Arial, Helvetica, sans-serif;
   min-height: 100%;
   height: 100%;
+  width: 100%;
+
+  @media screen and (max-width: 768px) {
+    padding: 50px 30px 0 30px;
+  }
 }
 
 #root{
