--- a/src/sass/pages/Locations.scss
+++ b/src/sass/pages/Locations.scss
@@ -6,9 +6,21 @@
     gap: 30px;
     margin-bottom: 30px;
 
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      gap: 4rem;
+    }
+
     img{
       display: block;
       border-radius: 10px;
+      object-fit: cover;
+
+      @media screen and (max-width: 768px) {
+        order: 1;
+        height: 326px;
+        width: 100%;
+      }
     }
   }
 
@@ -18,6 +30,10 @@
     padding: 50px 0 0 0px;
     border-radius: 10px;
     position: relative;
+
+    @media screen and (max-width: 768px) {
+      order: 2;
+    }
   }
 
   &__small-circles{
@@ -27,6 +43,11 @@
     width: 100%;
     left: 30px;
     bottom: 30px;
+
+    @media screen and (max-width: 768px) {
+      position: relative;
+      bottom: 30px;
+    }
   }
 
   &__small-circle1{
@@ -34,6 +55,7 @@
   }
   &__small-circle2{
     transform: rotate(-90deg) scale(1.3);
+
   }
 
   &__content{
@@ -44,6 +66,10 @@
     grid-template-columns: 1fr 1fr;
     column-gap: 80px;
     padding: 0 0 0 60px;
+
+    @media screen and (max-width: 768px) {
+      transform: translateY(-40%);
+    }
   }
 
   &__title{
@@ -53,6 +79,7 @@
     letter-spacing: 2px;
     font-weight: 500;
     margin-bottom: 30px;
+    grid-column: 1 / -1;
   }
 
   address{
