--- a/src/sass/pages/aboutUs.scss
+++ b/src/sass/pages/aboutUs.scss
@@ -12,11 +12,32 @@
 
   &__content{
     display: flex;
+
+    @media screen and (max-width: 768px) {
+      flex-wrap: wrap;
+      text-align: center;
+    }
+
+    img{
+      object-fit: cover;
+      z-index: 2;
+
+      @media screen and (max-width: 768px) {
+        order: 1;
+        height: 320px;
+        width: 100%;
+        border-radius: 10px 10px 0 0;
+      }
+    }
   }
 
   &__description{
     align-self: center;
     padding: 70px;
+
+    @media screen and (max-width: 768px) {
+      order: 2;
+    }
   }
 
   &__title{
@@ -41,6 +62,10 @@
   top: 475px;
   left: -100px;
   z-index: -1;
+
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
 }
 
 .left-image{
@@ -50,12 +75,28 @@
   display: flex;
   align-items: center;
 
+  @media screen and (max-width: 768px) {
+    flex-wrap: wrap;
+  }
+
   img{
     border-radius: 10px 0px 0px 10px;
+    object-fit: cover;
+
+    @media screen and (max-width: 768px) {
+      border-radius: 10px 10px 0px 0px;
+      width: 100%;
+      height: 320px;
+    }
   }
 
   &__content{
     padding: 0 50px;
+
+    @media screen and (max-width: 768px) {
+      text-align: center;
+      padding: 4rem;
+    }
   }
 
   &__title{
@@ -83,6 +124,11 @@
   justify-content: space-around;
   align-items: center;
   margin-top: 100px;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    gap: 2rem;
+  }
 
   &__canada, &__australia, &__uk{
     display: flex;
@@ -148,12 +194,30 @@
   display: flex;
   align-items: center;
 
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+  }
+
   img{
     border-radius: 10px 0px 0px 10px;
+    object-fit: cover;
+
+    @media screen and (max-width: 768px) {
+      order: 1;
+      border-radius: 10px 10px 0px 0px;
+      width: 100%;
+      height: 320px;
+    }
   }
 
   &__content{
     padding: 0 50px;
+
+    @media screen and (max-width: 768px) {
+      order: 2;
+      text-align: center;
+      padding: 6rem 4rem;
+    }
   }
 
   &__title{
