--- a/src/sass/pages/home.scss
+++ b/src/sass/pages/home.scss
@@ -9,21 +9,40 @@
   overflow: hidden;
   margin-top: 50px;
 
+  @media screen and (max-width: 768px){
+    height: 843px;
+  }
+
   img, &__content{
     position: absolute;
   }
 
   &__images{
     width: 50%;
+
+    @media screen and (max-width: 768px){
+      width: 100%;
+    }
   }
 
   &__circle-image{
     top: 0;
     right: 0;
+
+    @media screen and (max-width: 768px){
+      top: 100px;
+      left: 170px;
+    }
   }
 
   &__phone-image{
     right: -100px;
+
+    @media screen and (max-width: 768px){
+      top: 300px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
 
   &__content{
@@ -31,6 +50,14 @@
     width: 540px;
     top: 180px;
     left: 80px;
+
+    @media screen and (max-width: 768px){
+      position: absolute;
+      top: 60px;
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
+    }
   }
 
   &__title{
@@ -66,6 +93,12 @@
   top: 475px;
   left: 0px;
   z-index: -1;
+  width: 100%;
+  overflow: hidden;
+
+  @media screen and (max-width: 768px){
+    display: none;
+  }
 }
 
 .pages{
@@ -76,19 +109,47 @@
   grid-template-rows: 1fr 1fr;
   gap: 20px;
 
+  @media screen and (max-width: 768px) {
+    grid-template-columns: 1fr;
+    grid-template-rows: 200px 200px 200px;
+  }
+
   &__web-design{
     grid-row: 1 / -1;
+
+    @media screen and (max-width: 768px) {
+      grid-row: 1 / 2;
+    }
   }
 
   &__graphic-design{
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+
+    @media screen and (max-width: 768px) {
+      grid-column: 1 / 2;
+      grid-row: 3 / 4;
+    }
   }
 
   &__web-design, &__app-design, &__graphic-design{
     position: relative;
-    background-color: rgba($color: #000000, $alpha: 0.5);
     border-radius: 10px;
+
+    &::after{
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 10px;
+      background-color: rgba($color: #000000, $alpha: 0.5);
+      z-index: 1;
+    }
+    &:hover::after{
+      background-color: rgba($color: #e78168, $alpha: 0.5);
+    }
 
     img{
       border-radius: 10px;
@@ -96,6 +157,7 @@
       height: 100%;
       display: block;
       mix-blend-mode: multiply;
+      object-fit: cover;
     }
   }
 
@@ -110,6 +172,7 @@
       color: var(--clr-primary-white);
       text-transform: uppercase;
       text-align: center;
+      z-index: 2;
     }
 
     h2{
@@ -131,14 +194,26 @@
 
 .qualities{
   margin-top: 100px;
+  width: 100%;
   display: flex;
   gap: 20px;
   text-align: center;
   position: relative;
 
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    &__passionate, &__resourceful, &__friendly{
+      display: flex;
+    }
+  }
+
+
   &__images{
     position: relative;
     height: 202px;
+    @media screen and (max-width: 768px) {
+      left: 100px;
+    }
 
     img{
       position: absolute;
@@ -160,6 +235,13 @@
     transform: rotate(90deg);
   }
 
+  &__description{
+    @media screen and (max-width: 768px) {
+      text-align: left;
+      padding-left: 232px;
+    }  
+  }
+
   &__quality{
     margin-top: 50px;
     font-size: var(--fs-h3);
@@ -167,6 +249,11 @@
     text-transform: uppercase;
     letter-spacing: 5px;
     line-height: 26px;
+
+    @media screen and (max-width: 768px) {
+      text-align: left;
+      margin: 30px 0;
+    }
   }
 
   &__text{
@@ -175,6 +262,10 @@
     font-weight: 400;
     line-height: 26px;
     text-align: center;
+
+    @media screen and (max-width: 768px) {
+      text-align: left;
+    }
   }
 
   .bg-image-rounded-rect2{
