--- a/src/sass/pages/webDesign.scss
+++ b/src/sass/pages/webDesign.scss
@@ -1,4 +1,4 @@
-.introduction{
+.introduction {
   height: 252px;
   background-color: var(--clr-primary-peach);
   border-radius: 10px;
@@ -6,14 +6,14 @@
   position: relative;
   overflow-y: hidden;
 
-  &__bg-image{
+  &__bg-image {
     position: absolute;
     transform: translateY(-30%);
     right: 0;
     z-index: 0;
   }
 
-  &__content{
+  &__content {
     width: min(100%, 730px);
     position: absolute;
     top: 50%;
@@ -23,7 +23,7 @@
     padding: 150px;
   }
 
-  &__title{
+  &__title {
     font-weight: 500;
     font-size: var(--fs-h1);
     line-height: 48px;
@@ -31,7 +31,7 @@
     margin-bottom: 20px;
   }
 
-  &__text{
+  &__text {
     font-weight: 400;
     font-size: var(--fs-p);
     line-height: 26px;
@@ -39,34 +39,54 @@
   }
 }
 
-.bg-rounded-rect{
+.bg-rounded-rect {
   position: absolute;
   top: 281px;
   left: -100px;
   z-index: -1;
 }
 
-.content{
+.content {
   margin-top: 100px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
 
-  &__card{
+  @media screen and (max-width: 768px) {
+    grid-template-columns: 1fr;
+  }
+
+  &__card {
     max-width: 100%;
     border-radius: 10px;
-    background-color: #FDF3F0;
+    background-color: #fdf3f0;
+    transition: background-color 0.3s ease-in-out;
 
-    img{
+    @media screen and (max-width: 768px) {
+      display: flex;
+      align-items: center;
+    }
+
+    &:hover {
+      background-color: var(--clr-primary-peach);
+      cursor: pointer;
+    }
+
+    img {
       width: 100%;
       max-width: 100%;
       height: 320px;
       object-fit: cover;
       border-radius: 10px 10px 0 0;
+
+      @media screen and (max-width: 768px) {
+        border-radius: 10px 0 0 10px;
+        width: 50%;
+      }
     }
   }
 
-  &__title{
+  &__title {
     text-align: center;
     font-size: var(--fs-h3);
     line-height: 26px;
@@ -77,7 +97,7 @@
     color: var(--clr-secondary-light-peach);
   }
 
-  &__description{
+  &__description {
     padding: 0 40px 20px 40px;
     text-align: center;
     font-size: var(--fs-p);
@@ -86,43 +106,72 @@
   }
 }
 
-.pages-web{
+.pages-web {
   width: 100%;
   margin-top: 100px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
 
+  @media screen and (max-width: 768px) {
+    grid-template-columns: 100%;
+    grid-template-rows: 200px 200px;
+    grid-auto-flow: row;
+  }
 
-  &__app-design, &__graphic-design{
+  &__app-design,
+  &__graphic-design {
     position: relative;
     background-color: rgba($color: #000000, $alpha: 0.5);
     border-radius: 10px;
     grid-row: 1 / 2;
+    transition: background-color 0.3s ease-in-out;
 
-    img{
+    &:hover {
+      background-color: rgba($color: #e78168, $alpha: 0.5);
+      cursor: pointer;
+    }
+
+    img {
       border-radius: 10px;
       width: 100%;
       height: 100%;
       display: block;
       mix-blend-mode: multiply;
+      object-fit: cover;
     }
   }
 
-  &__link{
+  &__app-design {
+    @media screen and (max-width: 768px) {
+      grid-row: 1 / 2;
+      grid-column: 1 / -1;
+    }
+  }
+
+  &__graphic-design {
+    @media screen and (max-width: 768px) {
+      width: 100%;
+      height: 100%;
+      grid-row: 2 / 3;
+    }
+  }
+
+  &__link {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
 
-    h2, p{
+    h2,
+    p {
       color: var(--clr-primary-white);
       text-transform: uppercase;
       text-align: center;
     }
 
-    h2{
+    h2 {
       font-size: var(--fs-h2);
       line-height: 48px;
       font-weight: 500;
@@ -130,7 +179,7 @@
       margin-bottom: 20px;
     }
 
-    p{
+    p {
       font-weight: 500;
       font-size: 15px;
       letter-spacing: 5px;
