--- a/src/sass/components/contactLink.scss
+++ b/src/sass/components/contactLink.scss
@@ -1,4 +1,4 @@
-.contact-link{
+.contact-link {
   top: 150px;
   position: relative;
   overflow-y: hidden;
@@ -8,28 +8,37 @@
   display: flex;
   justify-content: space-between;
 
-  @media screen and (max-width: 768px){
+  @media screen and (max-width: 768px) {
     flex-direction: column;
   }
 
-  &__bg-image{
+  @media screen and (max-width: 560px) {
+    margin: 0 30px;
+    padding: 60px 0;
+  }
+
+  &__bg-image {
     position: absolute;
     top: 50%;
     right: 0;
     transform: translateY(-50%);
   }
 
-  &__content{
+  &__content {
     width: min(100%, 459px);
-    @media screen and (max-width: 768px){
+    @media screen and (max-width: 768px) {
       text-align: center;
       width: 100%;
       padding: 0 7rem;
       margin-bottom: 30px;
     }
+
+    @media screen and (max-width: 560px) {
+      padding: 0 20px;
+    }
   }
 
-  &__title{
+  &__title {
     font-size: var(--fs-h2);
     line-height: 48px;
     margin-bottom: 20px;
@@ -37,14 +46,14 @@
     font-weight: 500;
   }
 
-  &__text{
+  &__text {
     color: var(--clr-primary-white);
     font-size: var(--fs-p);
     line-height: 26px;
     font-weight: 400;
   }
 
-  &--contact-btn{
+  &--contact-btn {
     padding: 20px;
     align-self: center;
     border: none;
