--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,17 +24,21 @@ html{
 
 body{
   background-color: #f2f2f2;
-  padding: 50px 100px 0px 100px;
+  padding: 0px 100px 0px 100px;
   font-family: "Jost", Arial, Helvetica, sans-serif;
   min-height: 100%;
   height: 100%;
   width: 100%;
 
   @media screen and (max-width: 768px) {
-    padding: 50px 30px 0 30px;
+    padding: 0px 30px 0 30px;
+  }
+  @media screen and (max-width: 560px) {
+    padding: 0;
   }
 }
 
 #root{
   position: relative;
+  height: 100%;
 }
