--- a/src/sass/pages/Contact.scss
+++ b/src/sass/pages/Contact.scss
@@ -10,6 +10,11 @@
     flex-direction: column;
   }
 
+  @media screen and (max-width: 560px) {
+    margin-top: 0;
+    border-radius: 0;
+  }
+
   &__bg-circle{
     position: absolute;
     bottom: 0;
