--- a/src/sass/pages/Locations.scss
+++ b/src/sass/pages/Locations.scss
@@ -1,6 +1,10 @@
 .locations{
   margin-top: 100px;
 
+  @media screen and (max-width: 560px) {
+    margin-top: 0;
+  }
+
   &__canada, &__australia, &__uk{
     display: flex;
     gap: 30px;
@@ -34,6 +38,10 @@
     @media screen and (max-width: 768px) {
       order: 2;
     }
+
+    @media screen and (max-width: 560px) {
+      padding-bottom: 8rem;
+    }
   }
 
   &__small-circles{
@@ -52,10 +60,17 @@
 
   &__small-circle1{
     transform: rotate(180deg) scale(1.3);
+
+    @media screen and (max-width: 560px) {
+      transform: rotate(180deg) scale(1.3) translateX(-25%);
+    }
   }
   &__small-circle2{
     transform: rotate(-90deg) scale(1.3);
 
+    @media screen and (max-width: 560px) {
+      display: none;
+    }
   }
 
   &__content{
@@ -70,6 +85,12 @@
     @media screen and (max-width: 768px) {
       transform: translateY(-40%);
     }
+
+    @media screen and (max-width: 560px) {
+      grid-template-columns: 1fr;
+      text-align: center;
+      width: 100%;
+    }
   }
 
   &__title{
@@ -80,10 +101,18 @@
     font-weight: 500;
     margin-bottom: 30px;
     grid-column: 1 / -1;
+
+    @media screen and (max-width: 560px) {
+      margin-bottom: 20px;
+    }
   }
 
   address{
     font-size: var(--fs-p);
     line-height: 26px;
+
+    @media screen and (max-width: 560px) {
+      margin-bottom: 20px;
+    }
   }
 }
