--- a/src/sass/pages/aboutUs.scss
+++ b/src/sass/pages/aboutUs.scss
@@ -5,6 +5,11 @@
   margin-top: 100px;
   overflow: hidden;
 
+  @media screen and (max-width: 560px) {
+    border-radius: 0;
+    margin-top: 0;
+  }
+
   &__bg-image{
     position: absolute;
     transform: translate(-13%, -24%);
@@ -28,6 +33,10 @@
         width: 100%;
         border-radius: 10px 10px 0 0;
       }
+
+      @media screen and (max-width: 560px) {
+        border-radius: 0;
+      }
     }
   }
 
@@ -37,6 +46,10 @@
 
     @media screen and (max-width: 768px) {
       order: 2;
+    }
+
+    @media screen and (max-width: 560px) {
+      padding: 3rem 30px 4rem 30px;
     }
   }
 
@@ -79,6 +92,11 @@
     flex-wrap: wrap;
   }
 
+  @media screen and (max-width: 560px) {
+    border-radius: 0;
+    margin-top: 0;
+  }
+
   img{
     border-radius: 10px 0px 0px 10px;
     object-fit: cover;
@@ -88,6 +106,10 @@
       width: 100%;
       height: 320px;
     }
+
+    @media screen and (max-width: 560px) {
+      border-radius: 0;
+    }
   }
 
   &__content{
@@ -96,6 +118,10 @@
     @media screen and (max-width: 768px) {
       text-align: center;
       padding: 4rem;
+    }
+    
+    @media screen and (max-width: 560px) {
+      padding: 6rem 30px 0rem 30px;
     }
   }
 
@@ -208,6 +234,10 @@
       width: 100%;
       height: 320px;
     }
+
+    @media screen and (max-width: 560px) {
+      border-radius: 0;
+    }
   }
 
   &__content{
@@ -217,6 +247,10 @@
       order: 2;
       text-align: center;
       padding: 6rem 4rem;
+    }
+
+    @media screen and (max-width: 560px) {
+      padding: 6rem 30px 0rem 30px;
     }
   }
 
@@ -245,4 +279,8 @@
   top: 1777px;
   left: 500px;
   z-index: -1;
+
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
 }
